# Xenia

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
src/: main.cpp
src/Core/: RenderCore.cpp  RenderCore.hpp
src/Engine/: VulkanApp.cpp  VulkanApp.hpp
